# prd_assistant

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  SPEC.md  plan.md
analysis-agent/: README.md  SPEC.md
case-store/: README.md  SPEC.md
chrome-extension/: README.md  SPEC.md  manifest.json
code-evidence/: README.md  SPEC.md
config/: README.md  SPEC.md
deploy/: .env.example  README.md  SERVER_DEPLOYMENT.md  install-deps.sh  logagent-v2ctl.sh  logagent.example.yaml  logagentctl.sh  probe-influxdb-config.sh  probe-opengemini-config.sh  rebuild-install.sh  rebuild-v2-install.sh
deployment/: README.md  SPEC.md
docs/: architecture_review.md  product-architecture-and-flows.md
environment-collector/: README.md  SPEC.md
examples/: logagent.yaml  native-agent-remote-50992.yaml  native-agent-v2-50993.yaml  server-dev-selftest.yaml  server-fetch.yaml  server-flux-tool.yaml  server-influxdb-dev-selftest.yaml  server-influxdb-storage-tool.yaml  server-influxql-tool.yaml  server-llm-openai-compatible.yaml  server-opengemini-storage-tool.yaml  server-pprof-tool.yaml  server-test.yaml  server-tools.yaml
interfaces/: README.md  SPEC.md
llm-agent/: README.md  SPEC.md
log-analyzer/: README.md  SPEC.md
metadata/: README.md  SPEC.md
native-agent/: Cargo.toml  README.md  SPEC.md
native-agent/src/: main.rs
roadmap/: README.md  SPEC.md
scripts/: auto-deploy-lan.sh  build-all.sh  build-server.sh  build-tools.ps1  build-tools.sh  build-webui.sh  configure-tool-submodules.sh  init-workdir.sh  lib-logagent-workdir.sh  server-service.sh  start-local.sh  (+7 more)
server/: Cargo.toml  README.md  SPEC.md
server-v2/: README.md  SPEC.md  pyproject.toml
server-v2/logagent_v2/: __init__.py  __main__.py  agent.py  agent_audit.py  agent_graph.py  alias.py  analysis.py  analysis_package.py  api.py  artifacts.py  case_memory.py  claude_contracts.py  code_evidence.py  config.py  environment.py  evidence.py  exports.py  fetch.py  final_answer.py  ids.py  llm.py  mcp.py  mcp_audit.py  metadata.py  remote_execution.py  results.py  security.py  settings_api.py  skills.py  store.py  system_context.py  tools.py  webui_static.py  worker.py
server-v2/tests/: test_deploy_scripts.py  test_store.py  test_store_maintenance.py
server/src/: analysis_state.rs  app.rs  auth.rs  case_store.rs  config.rs  contracts.rs  error.rs  fs_utils.rs  id.rs  llm_gateway.rs  log_analyzer.rs  main.rs  mcp.rs  mcp_server.rs  metadata.rs  models.rs  pipeline.rs  state.rs  task_executor.rs  task_store.rs  tool_runner.rs  tools.rs  upload_store.rs
server/src/api/: cases.rs  debug.rs  health.rs  metadata.rs  mod.rs  tasks.rs  tools.rs  uploads.rs
server/src/domain/: contracts.rs  models.rs
server/src/http/: artifacts.rs  cases.rs  debug.rs  executors.rs  exports.rs  fetch.rs  health.rs  mcp_readonly.rs  metadata.rs  mod.rs  runs.rs  sessions.rs  settings.rs  skills.rs  system_context.rs  tasks.rs  tools.rs  uploads.rs
server/src/pipeline/: executor.rs  mod.rs
server/src/services/: agent_backend.rs  agent_contracts.rs  dev_selftest.rs  dev_selftest_allowlist.rs  dev_selftest_profiles.rs  domain_adapters.rs  fetch.rs  gemini_db.rs  huawei_package_sync.rs  llm_gateway.rs  log_analyzer.rs  metadata.rs  mod.rs  remote_execution.rs  skill_registry.rs  tool_runner.rs  tools.rs
server/src/stores/: analysis_state.rs  case_import_store.rs  case_store.rs  dev_selftest_store.rs  executor_store.rs  fetch_store.rs  memory_store.rs  mod.rs  session_store.rs  system_context_store.rs  task_store.rs  upload_store.rs
server/src/support/: auth.rs  config.rs  docker_target.rs  error.rs  fs_utils.rs  mod.rs
(+151 files in other folders)
